# pokemontology

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.json  README.md  pyproject.toml  requirements.txt
dev-artifacts/: README.md
docs/: 404.html  app.js  artifacts.html  dev.html  examples.html  graph.html  graph.js  index.html  modules.html  nl-to-sparql.md  ontology.ttl  pipelines.html  pokeapi-demo.ttl  pokedex.html  pokedex.js  proposal-rdf-backed-move-category.md  repo-structure.md  roadmap.md  schema-index.json  shapes.ttl  site-data.json  sparql-reference.md  styles.css
ontology/: pokemon-mechanics-ontology.ttl
pokemontology/: __init__.py  _script_loader.py  chat.py  cli.py  ingest_common.py  io_utils.py  laurel.py  laurel_eval.py  turn_order.py
queries/: README.md  super_effective_moves.sparql
scripts/: __init__.py  build_ontology.py  check_ttl_parse.py  extract-replay-entities.py  parse_showdown_replay.py  pokeapi_ingest.py  pokeapi_scrape.py  replay_parser.py  replay_to_ttl_builder.py  summarize_showdown_replay.py  veekun_ingest.py
shapes/: pokemon-mechanics-shapes.ttl
tests/: README.md  _laurel_support.py  conftest.py  test_build_site_assets.py  test_chat.py  test_cli.py  test_docs_query_engine.py  test_e2e.py  test_external_references.py  test_ingest_common.py  test_io_utils.py  test_laurel.py  test_laurel_eval.py  test_laurel_eval_suite.py  test_learnset_coverage.py  test_meta_ingest.py  test_parse.py  test_parse_showdown_replay.py  test_pokeapi_ingest.py  test_pokeapi_scrape.py  test_queries.py  test_replay_dataset.py  test_replay_parser.py  (+5 more)
(+100 files in other folders)
