[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemontology"
version = "0.1.0"
description = "Replay-backed Pokémon battle mechanics ontology with SHACL validation."
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0",
  "rdflib>=7.0",
  "pyshacl>=0.30",
]

[project.scripts]
pokemontology = "pokemontology.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: full-graph integration tests excluded from default runs (run with -m slow or -m '')",
]
